--- a/pasta-html/recuperar.html
+++ b/pasta-html/recuperar.html
@@ -5,41 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
-
-    <link rel="stylesheet" href="../pasta-css/login.css">
+    <link rel="stylesheet" href="../pasta-css/login-cadastro.css?v=11">  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>BookSphere | Recuperação</title>
 </head>
 
 <body>
-
-    <button id="btn-modo-leitura"></button>
-
     <div class="main-login">
-        <div class="right-login">
-            <div class="card-login"> <Img src="../LOGOS/Logo-fundo transparente-recortado.png">
+        <div class="login-container">
 
-                <form id="bloco_email">
-                    <h3 id="titulo_recuperacao" style="text-align: center; margin-bottom: 5px;">Recuperar Conta</h3>
-                    <p id="subtitulo_recuperacao" style="text-align: center; margin-bottom: 15px; font-size: 0.9em;">
-                        Digite seu e-mail de cadastro.</p>
+            <div class="logo-tab">
+                <img src="../LOGOS/Favicon.png" alt="Logo BookSphere">
+            </div>
 
-                    <div class="textfield">
+            <div class="card-login">
+
+                <form id="bloco_email" style="width: 100%;">
+                    <h3 id="titulo_recuperacao" style="text-align: center; font-size: 1.5rem; color: #fff; margin-bottom: 5px;">Recuperar Conta</h3>
+                    <p id="subtitulo_recuperacao" style="text-align: center; margin-bottom: 20px; font-size: 0.9em; color: #999;">
+                        Digite seu e-mail de cadastro.
+                    </p>
+
+                    <div class="textfield-floating">
+                        <input type="email" id="email" name="email" required placeholder=" ">
                         <label for="email">E-mail</label>
-                        <input type="email" id="email" name="email" placeholder="Digite seu e-mail cadastrado" required>
+                        <i class="bi bi-envelope input-icon"></i>
                     </div>
 
                     <button type="submit" class="btn-login">Enviar Código</button>
-
                 </form>
-                <form id="bloco_codigo">
-                    <h3 style="text-align: center; margin-bottom: 5px;">Verificar Código</h3>
-                    <p id="info_codigo" style="text-align: center; margin-bottom: 15px; font-size: 0.9em;">Enviamos um
-                        código para o seu e-mail.</p>
 
-                    <div class="textfield">
+                <form id="bloco_codigo" style="display: none; width: 100%;">
+                    <h3 style="text-align: center; font-size: 1.5rem; color: #fff; margin-bottom: 5px;">Verificar Código</h3>
+                    <p id="info_codigo" style="text-align: center; margin-bottom: 20px; font-size: 0.9em; color: #999;">
+                        Enviamos um código para o seu e-mail.
+                    </p>
+
+                    <div class="textfield-floating">
+                        <input type="text" id="codigo" name="codigo" required placeholder=" " maxlength="4">
                         <label for="codigo">Código de 4 dígitos</label>
-                        <input type="text" id="codigo" name="codigo" placeholder="0000" required maxlength="4">
+                        <i class="bi bi-hash input-icon"></i>
                     </div>
 
                     <button type="submit" class="btn-login" id="btn_verificar">Verificar Código</button>
@@ -48,7 +53,11 @@
                 </form>
 
                 <div class="box-msg">
-                    <p id="mensagem" class="mensagem-status"></p>
+                    <p id="mensagem"></p>
+                </div>
+                
+                <div class="signup-text" style="margin-top: 20px;">
+                    Lembrou a senha? <a href="login.html">Voltar ao Login</a>
                 </div>
 
             </div>
@@ -59,5 +68,4 @@
     <script src="../pasta-js/personalizacao.js"></script>
 
 </body>
-
 </html>
