--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../pasta-css/login-cadastro.css?v=11">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <title>BookSphere | Login</title>
 </head>
 
@@ -59,12 +60,15 @@
                     <hr>
                 </div>
                 <div class="social-login-buttons">
-                    <button type="button" class="btn-social google">
-                        <i class="bi bi-google"></i> Entrar com o Google
-                    </button>
+                    <div id="g_id_onload" data-client_id="https://271575564526-7digq2qtlr7f6nhcvouu595hb9a1fb7j.apps.googleusercontent.com/"
+                        data-login_uri="https://booksphere.sbs/pasta-php/login-google.php"
+                        data-callback="processarLoginGoogle">
+                    </div>
 
+                    <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="outline"
+                        data-text="continue_with" data-size="large" data-locale="pt-BR" data-logo_alignment="left">
+                    </div>
                 </div>
-
 
                 <div class="box-msg">
                     <p id="mensagem"></p>
