ajustes e mais ajustes

--- a/pasta-html/faleconosco.html
+++ b/pasta-html/faleconosco.html
@@ -7,7 +7,7 @@
   <title>BookSphere | Formulário de Contato</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../pasta-css/faleconosco.css" />
-  <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon">
 </head>
 
 <body>
