--- a/pasta-html/cadastro.html
+++ b/pasta-html/cadastro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon">
     <link rel="stylesheet" href="../pasta-css/login-cadastro.css?v=11">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>BookSphere | Cadastro</title>
@@ -16,7 +16,7 @@
         <div class="login-container">
 
             <div class="logo-tab">
-                <img src="../LOGOS/Favicon.png" alt="Logo BookSphere">
+                <img src="../LOGOS/faviconBS.png" alt="Logo BookSphere">
             </div>
 
             <form id="formCadastro" class="card-login" action="../pasta-php/cadastrar.php" method="POST" enctype="multipart/form-data">
