--- a/pasta-html/livros.html
+++ b/pasta-html/livros.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="../pasta-css/livros.css" />
   <link rel="stylesheet" href="../pasta-css/home.css" />
-  <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon" />
   <title>BookSphere | Biblioteca</title>
 </head>
 
