--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon">
     <link rel="stylesheet" href="../pasta-css/login-cadastro.css?v=13">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -17,7 +17,7 @@
         <div class="login-container">
 
             <div class="logo-tab">
-                <img src="../LOGOS/Favicon.png" alt="Logo BookSphere">
+                <img src="../LOGOS/faviconBS.png" alt="Logo BookSphere">
             </div>
 
             <form id="formLogin" class="card-login" action="../pasta-php/login.php" method="POST">
