--- a/pasta-html/obrigado.html
+++ b/pasta-html/obrigado.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../pasta-css/obrigado.css" />
   <title>BookSphere | Obrigado</title>
