--- a/pasta-html/sinopse.html
+++ b/pasta-html/sinopse.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../pasta-css/home.css">
     <link rel="stylesheet" href="../pasta-css/livros.css">
     <link rel="stylesheet" href="../pasta-css/sinopse.css">
-    <link rel="shortcut icon" href="../LOGOS/Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon">
     <title>BookSphere | Sinopse</title>
 </head>
 
