--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -20,7 +20,7 @@
                 <img src="../LOGOS/faviconBS.png" alt="Logo BookSphere">
             </div>
 
-            <form id="formLogin" class="card-login" action="../pasta-php/login.php" method="POST">
+            <form id="formLogin2" class="card-login" action="../pasta-php/login.php" method="POST">
 
                 <h1>Bem-vindo!</h1>
 
