--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../LOGOS/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../pasta-css/login-cadastro.css?v=13">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -17,7 +17,7 @@
         <div class="login-container">
 
             <div class="logo-tab">
-                <img src="../LOGOS/faviconBS.png" alt="Logo BookSphere">
+                <img src="../LOGOS/Favicon.png" alt="Logo BookSphere">
             </div>
 
             <form id="formLogin" class="card-login" action="../pasta-php/login.php" method="POST">
@@ -53,14 +53,28 @@
                     Não tem conta? <a href="cadastro.html">Cadastre-se</a>
                 </div>
 
+                <div class="social-login-separator">
+                    <hr>
+                    <span>Ou continue com</span>
+                    <hr>
+                </div>
+                <div class="social-login-buttons">
+                    <div id="g_id_onload"
+                        data-client_id="271575564526-7digq2qtlr7f6nhcvouu595hb9a1fb7j.apps.googleusercontent.com"
+                        data-login_uri="https://booksphere.sbs/pasta-php/login-google.php"
+                        data-callback="processarLoginGoogle">
+                    </div>
+                    <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="outline"
+                        data-text="continue_with" data-size="large" data-locale="pt-BR" data-logo_alignment="left">
+                    </div>
+                </div>
+
                 <div class="box-msg">
                     <p id="mensagem"></p>
                 </div>
 
             </form>
-            
         </div>
-        
     </div>
 
     <script src="../pasta-js/login.js"></script>
