--- a/pasta-html/login.html
+++ b/pasta-html/login.html
@@ -17,7 +17,7 @@
         <div class="login-container">
 
             <div class="logo-tab">
-                <img src="../LOGOS/Favicon.png" alt="Logo BookSphere">
+                <img src="../LOGOS/faviconBS.png" alt="Logo BookSphere">
             </div>
 
             <form id="formLogin" class="card-login" action="../pasta-php/login.php" method="POST">
