--- a/pasta-html/obrigado.html
+++ b/pasta-html/obrigado.html
@@ -4,25 +4,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../pasta-css/obrigado.css" />
   <title>BookSphere | Obrigado</title>
+
+  <link rel="stylesheet" href="../pasta-css/login-cadastro.css?v=13">
+  <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
 
-  <button id="btn-modo-leitura"></button>
+  <button id="btn-modo-leitura" style="display: none;"></button>
 
-  <main class="thankyou-container">
-    <div class="message">
-      <h2>Obrigado</h2>
-      <p>Retornaremos sua mensagem em breve</p>
+  <div class="main-login">
+    <div class="login-container">
+
+      <div class="logo-tab">
+        <img src="../LOGOS/faviconBS.png" alt="Logo BookSphere">
+      </div>
+
+      <div class="card-login" style="text-align: center;">
+
+        <div style="margin-bottom: 20px;">
+          <i class="bi bi-check-circle-fill" style="font-size: 4rem; color: #00ff88;"></i>
+        </div>
+
+        <h1 style="margin-bottom: 10px;">Obrigado!</h1>
+
+        <p style="color: #ccc; margin-bottom: 30px; font-size: 1rem; line-height: 1.5;">
+          Sua mensagem foi enviada com sucesso.<br>
+          Retornaremos em breve.
+        </p>
+
+        <a href="home.html" class="btn-login"
+          style="text-decoration: none; display: flex; justify-content: center; align-items: center; height: 50px;">
+          Voltar para o site
+        </a>
+
+      </div>
     </div>
-    <a id="btn-back" onclick="window.history.go(-2); return false;">
-      <span>Voltar para o site</span>
-    </a>
-  </main>
+  </div>
 
   <script src="../pasta-js/personalizacao.js"></script>
 </body>
