--- a/pasta-html/home.html
+++ b/pasta-html/home.html
@@ -106,7 +106,7 @@
             <img src="../Capas/AAlegriaDaRevolucao.webp" alt="A Dama das Camelias" />
             <img src="../Capas/A-Comédia-dos-Erros.jpg" alt="A Alma do Lazaro" />
             <img src="../Capas/EdipoRei.jpg" alt="Helena" />
-            <img src="../Capas/Diario-Intimo.jpg" alt="A Bela Madame Vargas" />
+            <img src="../Capas/ContoDeEscola.jpg" alt="A Bela Madame Vargas" />
             <img src="../Capas/Schopenhauer.jpg" alt="A Utopia" />
             <img src="../Capas/Iracema.jpg" alt="A IgrejaDoDiabo" />
             <img src="../Capas/OElixirdaLongaVida.png" alt="A Moreninha" />
