--- a/pasta-html/sobre.html
+++ b/pasta-html/sobre.html
@@ -79,7 +79,7 @@
             </h2>
         </Div>
         <div class="Foto">
-            <img src="../LOGOS/Logo.png" alt="Sobre nós">
+            <img src="../LOGOS/Logo.jpg" alt="Sobre nós">
         </div>
     </div>
     </div>
