--- a/pasta-html/home.html
+++ b/pasta-html/home.html
@@ -11,6 +11,9 @@
     <title>BookSphere | Site para Leituras de Livros Online</title>
     <meta name="description" content="Leia livros online em nosso site de leitura grátis.
         A BookSphere oferece a função de ler livros online e baixar os PDFs dos livros.">
+    <meta name="keywords"
+        content="livros online, ler livros gratis, biblioteca virtual, machado de assis, literatura brasileira, ebooks gratis">
+    <meta name="robots" content="index, follow">
 </head>
 <div class="cabeçario">
     <img class="logo-cabeçario" src="../LOGOS/Logo-fundo transparente-recortado.png" alt="Logo do Site"
