--- a/pasta-html/sinopse.html
+++ b/pasta-html/sinopse.html
@@ -4,12 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BookSphere | Detalhes do Livro</title>
+    <meta name="description"
+        content="Leia a sinopse completa, veja o autor e leia online gratuitamente clássicos da literatura brasileira e mundial no BookSphere.">
+    <meta name="keywords"
+        content="ler livros online, pdf gratis, literatura brasileira, machado de assis, jose de alencar, biblioteca virtual">
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="book">
+    <meta property="og:site_name" content="BookSphere">
+    <meta property="og:title" content="Livros Grátis no BookSphere">
+    <meta property="og:description" content="Descubra e leia milhares de livros clássicos gratuitamente.">
+    <meta property="og:image" content="https://booksphere.sbs/LOGOS/Logo-fundo-transparente-recortado.png">
+    <meta property="og:url" content="https://booksphere.sbs/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../pasta-css/home.css">
     <link rel="stylesheet" href="../pasta-css/livros.css">
     <link rel="stylesheet" href="../pasta-css/sinopse.css">
     <link rel="shortcut icon" href="../LOGOS/faviconBS.png" type="image/x-icon">
-    <title>BookSphere | Sinopse</title>
 </head>
 
 <body>
@@ -142,6 +153,27 @@
     <script src="../pasta-js/personalizacao.js"></script>
     <script src="../pasta-js/usersedit.js"></script>
     <script src="../pasta-js/usersGlobal.js?v=1.1"></script>
+
+    <script type="application/ld+json" id="json-ld-book">
+{
+  "@context": "https://schema.org",
+  "@type": "Book",
+  "name": "Carregando...", 
+  "author": {
+    "@type": "Person",
+    "name": "Carregando..."
+  },
+  "url": "https://booksphere.sbs/pasta-html/sinopse.html",
+  "inLanguage": "pt-BR",
+  "isAccessibleForFree": true,
+  "provider": {
+    "@type": "Organization",
+    "name": "BookSphere"
+  }
+}
+
+</script>
+
 </body>
 
 </html>
